# spa-demo

./: .gitignore  README.md  home.html  pyproject.toml
blog/: settings.py  urls.py
myblog/: views.py
myblog/templates/myblog/block/: footer.html  slider.html
myblog_app/: apps.py  forms.py  models.py  urls.py  views.py
myblog_app/migrations/: 0001_initial.py
myblog_app/templates/myblog_app/: home.html  post_detail.html  signup.html
myblog_app/templates/myblog_app/block/: comments.html  navbar.html
templates/: home.html
