[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.15"
python-decouple = "^3.6"
Pillow = "^10.3.0"
django-ckeditor = "^6.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "manage:main"
